<resources>
    <string name="app_name">Sellgg</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="textview">TextView</string>
    <string name="account_informatioin">Account Informatioin</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail:</string>
    <string name="password">Password:</string>
    <string name="number_of_listings">Number of Listings:</string>
    <string name="usernames">Username:</string>
    <string name="search">Search</string>
    <string name="get_results">Get Results</string>
    <string name="sell_gg_price">Sell.gg Price</string>
    <string name="average_price">Average Price</string>
    <string name="list_with_avg_price">List with Avg Price</string>
    <string name="list_with_sell_gg_price">List with Sell.gg Price</string>
    <string name="sell_gg">Sell.gg</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign-Up</string>
    <string name="avgprices">$.$$</string>
    <string name="sellggprices">$.$$</string>
    <string name="button">Button</string>
</resources>
