<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResults"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_results"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_below="@+id/avg_price_label"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="31dp"
        android:gravity="center_horizontal"
        android:text="@string/sellggprices"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/view_sellgg"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_below="@+id/sellgg_price_label"
        android:layout_marginStart="230dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="33dp"
        android:gravity="center_horizontal"
        android:text="@string/avgprices"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/avg_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/average_price"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/sellgg_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/avg_price_label"
        android:layout_toRightOf="@+id/avg_price_label"
        android:fontFamily="@font/bangers"
        android:text="@string/sell_gg_price"
        android:textColor="@android:color/holo_purple" />

    <Button
        android:id="@+id/big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_results"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"/>

    <Button
        android:id="@+id/sell_at_sellgg"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="270dp"
        android:background="@android:color/holo_purple"
        android:padding="1dp"
        android:text="@string/list_with_sell_gg_price"
        android:layout_marginStart="270dp" />

    <Button
        android:id="@+id/sell_at_avg"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="431dp"
        android:background="@android:color/holo_red_light"
        android:padding="1dp"
        android:text="@string/list_with_avg_price"
        android:layout_marginStart="40dp" />


</RelativeLayout>