<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/accinfo"
android:background="@android:color/white"
android:layout_width="match_parent"
android:padding="10dp"
android:layout_height="match_parent"
android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_informatioin"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/holo_purple"
        android:fontFamily="@font/bangers"
        android:padding="8dp"/>

    <TextView
    android:id="@+id/username_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/usernames" />

<TextView
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_toRightOf="@+id/username_label"
    android:ems="10" />

<TextView
    android:id="@+id/email_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/e_mail" />

<TextView
    android:id="@+id/email"
    android:layout_width="168dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:ems="30" />

<TextView
    android:id="@+id/password_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/password" />

<TextView
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:ems="15"
    android:numeric="signed|decimal"
    android:password="true" />

<TextView
    android:id="@+id/listings_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/number_of_listings" />


<TextView
    android:id="@+id/listings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:layout_marginBottom="10dp"/>

<TextView
    android:id="@+id/firstName_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="First Name:" />

<TextView
    android:id="@+id/firstName"
    android:layout_width="171dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"/>

<TextView
    android:id="@+id/lastName_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Last Name:"/>

<TextView
    android:id="@+id/lastName"
    android:layout_width="172dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/edit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Account"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_purple"
        android:padding="5dp"/>


</LinearLayout>
